[FIX] Add 'post' class to default li for multiple sections

--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -1,7 +1,7 @@
 {{ if .Params.featured }}
-<article class="{{ .Section }} featured">
+<article class="post {{ .Section }} featured">
 {{ else }}
-<article class="{{ .Section }}">
+<article class="post {{ .Section }}">
 {{ end }}
 	<div class="inner">
 		<a class="post-link" href="{{ .Permalink }}"></a>
