[FIX] The newest version includes slash

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -23,7 +23,7 @@
   				<div class="post-tags">
             {{if .Params.tags }}
             {{ range $index, $tag := .Params.tags }}
-                <a href="{{ $baseurl }}/tags/{{ $tag | urlize }}/">{{ $tag }}</a>
+                <a href="{{ $baseurl }}tags/{{ $tag | urlize }}/">{{ $tag }}</a>
             {{ end }}
             {{ end }}
   				</div>
