--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,7 +9,15 @@
 
   			<header class="post-header">
   				<span class="post-meta">
-						<span class="post-date">{{ .Date.Format "2 Jan 2006" }}</span> <span class="reading-time">| <span class="estimated-reading-time">{{ .ReadingTime }} min.</span> (<span class="word-count">{{ .WordCount }}</span> words)</span></span>
+						<span class="post-date">{{ .Date.Format "2 Jan 2006" }}</span>
+            <span class="reading-time"> | <span class="estimated-reading-time">{{ .ReadingTime }} min.</span> (<span class="word-count">{{ .WordCount }}</span> words)</span>
+            {{if .Params.categories }}
+              <span class="post-categories"> |
+                {{ range $index, $category := .Params.categories }}
+                    <a href="{{ $baseurl }}categories/{{ $category | urlize }}/">{{ $category }}</a>
+                {{ end }}
+              </span>
+            {{ end }}
   				</span>
   				<div class="clear"></div>
   				<h1 class="post-title">{{ .Title }}</h1>
