[FIX] Use permalink for multiple sections

--- a/layouts/_default/list.html
+++ b/layouts/_default/list.html
@@ -2,7 +2,7 @@
 
 <header id="header" class="header{{ if .Site.Params.cover }} has-cover{{ end }}">
 	<div class="inner">
-		<a class="header-title" href="{{ .Site.BaseURL }}">
+		<a class="header-title" href="{{ .Permalink }}">
 			<h1 class="header-name">{{ .Title }}</h1>
 		</a>
 	</div>
