[REF] Move sytles to theme styles and add custom [FIX] small in header title [FEAT] Add section to post list and single.

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -21,7 +21,7 @@
 			<div class="post-list">
 				<div id="push">
 
-			{{ $paginator := .Paginate (where .Data.Pages "Type" "post") }}
+      {{ $paginator := .Data }}
 
 			{{ range $index, $page := $paginator.Pages }}
 			  {{ .Render "li" }}
