--- a/layouts/_default/li.html
+++ b/layouts/_default/li.html
@@ -10,6 +10,7 @@
 			<a href="{{ .Permalink }}"><img src="{{ .Params.image }}" alt="" /></a>
 		</figure>
 		{{ end }}
+    <div class="post-section"><span class="post-section-{{ .Section }}">{{ .Section }}</span></div>
 		<span class="post-meta">
 			<span class="post-date">{{ .Date.Format "2 Jan 2006" }}</span>
 		</span>
