--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -9,6 +9,7 @@
 
   			<header class="post-header">
   				<span class="post-meta">
+            <div class="post-section post-section-detail"><span class="post-section-{{ .Section }}">{{ .Section }}</span></div>
 						<span class="post-date">{{ .Date.Format "2 Jan 2006" }}</span>
             <span class="reading-time"> | <span class="estimated-reading-time">{{ .ReadingTime }} min.</span> (<span class="word-count">{{ .WordCount }}</span> words)</span>
             {{if .Params.categories }}
